fixed the gap

--- a/blockent.css
+++ b/blockent.css
@@ -18,6 +18,7 @@ body, html {
     align-items: flex-start;
     padding: 3rem;
     min-height: 100%;
+    gap: 2rem;
    
 
   }
